# qc

./: .gitignore  README.md  README.odt  TODO  input.sh  quasi_script_parameters.txt  runQuasi.sh
Info/: build-library-local.sh  input.info  r_initial_freq.info  visit-function-definitions.xml
Info/CheckLibrary/: check_library.sh
Input/: mesh.ini.sample  quasi.ini.sample
Input/Ar/: quasi.ini
Input/GaN/: quasi.ini
Input/NiAl/: quasi-20K.ini  (+4 more)
QuasiSRC/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac
QuasiSRC/applications/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  libtool
QuasiSRC/applications/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
QuasiSRC/applications/nano-indentation/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Mishin02_AlAl.eam  Mishin02_NiAl.eam  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool  main.cc  quasi  quasi.ini  stamp.cc  test  test.cc  triang_server
QuasiSRC/applications/nano-indentation/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
QuasiSRC/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
QuasiSRC/include/: CGNonLinearSolver.h  C_Interface.h  CreateMesh.h  CrossNeighborList.h  DataTypes.h  Electrostatics.h  Element.h  Error.h  ForceEnergyCalculation.h  Indent.h  Input.h  Lattice.h  MiscFunctions.h  Node.h  NonLinearSolver.h  Output.h  PairPotentials.h  QuadraturePoints.h  Quasicontinua.h  QuasicontinuaForceFunction.h  Quasicontinuum.h  RunData.h  Shape.h  SolverFunction.h  Void.h  monitor.h  numa.h  range_search_generic.h  read_pipe.h  site_element_map.h  site_element_map_cache.h  spline.h  threads.h
QuasiSRC/mesh/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool  mesh  mesh.cc  mesh.ini
QuasiSRC/mesh/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
QuasiSRC/mesh/include/: Error.h
QuasiSRC/src/: CGNonLinearSolver.cc  CMakeLists.txt  C_Interface.cc  CreateMesh.cc  CrossNeighborList.cc  Electrostatics.cc  Element.cc  ForceEnergyCalculation.cc  Indent.cc  Input.cc  Lattice.cc  Makefile  Makefile.am  Makefile.in  MiscFunctions.cc  Node.cc  NonLinearSolver.cc  Output.cc  PairPotentials.cc  QuadraturePoints.cc  Quasicontinua.cc  QuasicontinuaForceFunction.cc  Quasicontinuum.cc  RunData.cc  Shape.cc  SolverFunction.cc  Void.cc  aluminum.f  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  monitor.c  numa.c  range_search_generic.c  read_pipe.c  site_element_map.c  site_element_map_cache.c  (+1 more)
QuasiSRC/src/.deps/: NonLinearSolver.Plo  Quasicontinua.Plo  Quasicontinuum.Tpo  SolverFunction.Plo  monitor.Plo  numa.Plo  range_search_generic.Plo  read_pipe.Plo  site_element_map.Plo  site_element_map_cache.Plo  threads.Plo
QuasiSRC/src/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
QuasiSRC/system/: 64_bit.m4  acconfig.h  acinclude.m4  acx_mpi.m4  ar.m4  debug.m4  dmalloc.m4  f77.m4  inventor.m4  link.m4  macros.m4  version.m4
QuasiSRC/system/C/: compiler.m4
QuasiSRC/system/C++/: cassert  cctype  cerrno  climits  cmath  compiler.m4  cstdio  cstdlib  cstring  ctime
QuasiSRC/system/F77/: compiler.m4  f77.h
QuasiSRC/system/F90/: compiler.m4
QuasiSRC/triangulation_server/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac  libtool
QuasiSRC/triangulation_server/autom4te.cache/: output.0  output.1  requests  traces.0  traces.2
QuasiSRC/triangulation_server/geompack/: CMakeLists.txt  Errcodes  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool
QuasiSRC/triangulation_server/geompack/autom4te.cache/: output.0  output.1  requests  traces.0  traces.2
QuasiSRC/triangulation_server/geompack/basic3d/: CMakeLists.txt  DRmeas.f  DRshap.f  DRtet.f  Makefile  Makefile.am  Makefile.in  angle3.f  baryth.f  ccradi.f  ccsph.f  config.h  config.status  configure  configure.ac  emnrth.f  insph.f  libtool  opside.f  radrth.f  sangmn.f  sdang.f  test.f  volth.f
QuasiSRC/triangulation_server/geompack/basic3d/autom4te.cache/: output.0  output.1  requests  traces.0  traces.2
QuasiSRC/triangulation_server/geompack/deltr3d/: CMakeLists.txt  DRdtr3.f  DRfcht.f  Makefile  Makefile.am  Makefile.in  availf.f  bnsrt3.f  config.h  config.status  configure  configure.ac  dtris3.f  dtriw3.f  fndmsw.f  frstet.f  htdel.f  htfun.c  htfun.f  htins.f  htsrc.f  ifacty.f  imptr3.f  imptrd.f  imptrf.f  itris3.f  libtool  nwthed.f  nwthfc.f  nwthin.f  nwthou.f  order3.f  swapes.f  swapmu.f  swaptf.f  tetlst.f  tetmu.f  updatf.f  vbfac.f  walkt3.f
QuasiSRC/triangulation_server/geompack/deltr3d/.deps/: htfun.Plo
QuasiSRC/triangulation_server/geompack/deltr3d/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
QuasiSRC/triangulation_server/geompack/general/: CMakeLists.txt  DRinit.f  DRlu.f  DRprim.f  DRrot.f  DRsort.f  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  dhpsrt.f  dless.f  dsftdw.f  gtime.f  ihpsrt.f  iless.f  initcb.f  isftdw.f  libtool  lufac.f  lusol.f  prime.f  randpt.f  rotiar.f  urand.f
QuasiSRC/triangulation_server/geompack/general/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
QuasiSRC/triangulation_server/include/: triangulation_client.h  triangulation_server.h  util.h
QuasiSRC/triangulation_server/src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  error.f  libtool  triang_server  triangulation_client.c  triangulation_server.c  util.c
QuasiSRC/triangulation_server/src/.deps/: triangulation_client.Plo  triangulation_server.Po  util.Plo
QuasiSRC/triangulation_server/src/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
(+185 files in other folders)
