dnl
dnl Top-level configuration for Quasi



dnl
dnl Initialize
dnl
AC_INIT
AC_CONFIG_AUX_DIR(./bin)
AM_INIT_AUTOMAKE(quasi-top, [" "])
AM_MAINTAINER_MODE
AC_CONFIG_SRCDIR([Makefile.am])
AC_CANONICAL_HOST
AC_SRC_DIR_EXPAND
AM_CONFIG_HEADER(config.h)
AC_PROG_MAKE_SET
AM_DISABLE_SHARED
AM_PROG_LIBTOOL
dnl
dnl Checks for programs.
dnl
AC_PROG_LN_S

dnl
dnl Checks for libraries.
dnl

dnl
dnl Checks for headers
dnl 

dnl
dnl Checks for typedefs, structures, and compiler characteristics.
dnl

dnl
dnl Checks for specific definitions in headers
dnl

dnl
dnl Check for specific functions
dnl

dnl
dnl Finish up
dnl
AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([triangulation_server src mesh applications])
AC_OUTPUT
