dnl
dnl Top-level configuration for triangulation libraries



dnl
dnl Initialize
dnl
AC_INIT
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_AUX_DIR(../bin)
AM_INIT_AUTOMAKE(applications, ["$Id$"])
AM_MAINTAINER_MODE
AC_CANONICAL_HOST
AC_SRC_DIR_EXPAND
AC_PROG_MAKE_SET
AM_DISABLE_SHARED
AM_PROG_LIBTOOL
dnl
dnl Finish up
dnl
AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([nano-indentation])
AC_OUTPUT
