project(triangulation Fortran C)
cmake_minimum_required(VERSION 3.1)

#if (Fortran_COMPILER_NAME MATCHES "gfortran.*")
#  set(CMAKE_Fortran_FLAGS_RELEASE "-funroll-all-loops -fno-f2c -O3")
#  set(CMAKE_Fortran_FLAGS_DEBUG "-fno-f2c -O0 -g")
#elseif (Fortran_COMPILER_NAME MATCHES "ifort.*")
#  set(CMAKE_Fortran_FLAGS_RELEASE "-f77rtl -O3")
#  set(CMAKE_Fortran_FLAGS_DEBUG "-f77rtl -O0 -g")
#elseif(Fortran_COMPILER_NAME MATCHES "g77")
#  set(CMAKE_Fortran_FLAGS_RELEASE "-funroll-all-loops -fno-f2c -O3 -m32")
#  set(CMAKE_Fortran_FLAGS_DEBUG "-fno-f2c -O0 -g -m32")
#else(Fortran_COMPILER_NAME MATCHES "gfortran.*")
#  message("CMAKE_Fortran_COMPILER full path: " ${CMAKE_Fortran_COMPILER})
#  message("Fortran compiler: " ${Fortran_COMPILER_NAME})
#  message("No optimized Fortran compiler flags are known, we just try -O2...")
#  set(CMAKE_Fortran_FLAGS_RELEASE "-O2")
#  set(CMAKE_Fortran_FLAGS_DEBUG "-O0 -g")
#endif(Fortran_COMPILER_NAME MATCHES "gfortran.*")

add_subdirectory(geompack)
add_subdirectory(src)
