## Makefile for deltr3D library
##
## Notes:
## We are always compiling with htfun.c, and leaving out htfun.f

ACLOCAL_AMFLAGS  = -I ../../../system


noinst_LTLIBRARIES = libgeneral.la
libgeneral_la_SOURCES =  dhpsrt.f dless.f dsftdw.f gtime.f ihpsrt.f iless.f \
initcb.f isftdw.f lufac.f lusol.f prime.f randpt.f rotiar.f urand.f
